# nsga2-multidrone-routing

./: .gitignore  LICENSE  README.md  drone.py  main.py  pyproject.toml  requirements.txt  run_experiments.sh
scratch/: NSGAII_sanity_sweep.csv  NSGAII_sanity_time.csv  headline_dmopso.py  verify_variable_fleet.py
scripts/: budget_probe_report.py  checkpoint_mopso.py  checkpoint_nsga2.py  cobudget_report.py  compare_double_iters.py  eval_all.py  eval_budget_probe.py  eval_cobudget.py  eval_double_iters.py  eval_eil51.py  eval_gens_sweep.py  eval_swarm_iters.py  eval_swarm_size.py  gens_sweep_report.py  holm_correction.py  make_figures.py  plot_dmopso_pareto.py  sanity_check.py  swarm_iters_report.py  swarm_size_report.py  table_double_iters.py
src/uav/: __init__.py  seeds.py  solution.py
src/uav/algorithms/: __init__.py  base.py  dmopso.py  mopso.py  nsga2.py
src/uav/evaluation/: __init__.py  aggregate.py  metrics.py  reference_front.py  stats.py
src/uav/experiment/: __init__.py  config.py  runner.py
src/uav/problem/: __init__.py  decode.py  fitness.py  instance.py
src/uav/viz/: __init__.py  animation.py  convergence.py  pareto.py  routes.py
tests/: test_aggregate.py  test_decode.py  test_dmopso.py  test_fitness.py  test_instance.py  test_metrics.py  test_mopso.py  test_nsga2.py  test_reference_front.py  test_runner.py  test_skeleton.py  test_stats.py  test_viz.py
